[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "polyplotter"
version = "0.0.6"
description = "A quick way to plot polygons"
readme = "README.md"
authors = [
    {name = "Julius", email = "julius.simonelli@gmail.com"}
]
homepage = "https://github.com/jss367/polyplotter"
repository = "https://github.com/jss367/polyplotter"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
python = ">=3.6"

[project.urls]
bug_tracker = "https://github.com/jss367/polyplotter/issues"


[project.dependencies]
matplotlib = "^3.6.0"
